--- a/README
+++ b/README
@@ -1,4 +1,1 @@
-This is your new Play application
-=================================
-
-This file will be packaged with your application, when using `activator dist`.
+Wing is not Github - Source code sharing system (Project for MAC0332 - Software Engineering, second semester 2014).
